# input file for automake

bin_PROGRAMS = edlin
edlin_SOURCES = defines.c defines.h dynarray.h dynstr.c dynstr.h \
                edlib.c edlib.h edlin.c msgs.h
edlin_MANS = edlin.1.gz
EXTRA_DIST = config-h.bc Makefile.bc edlin.htm edlin.tgt edlin.wpj \
             msgs-en.h catgets.c nl_types.h \
             malloc.c realloc.c msgscats.h config-h.ow \
             kit2msgs.c ow.bat
